cmake_minimum_required(VERSION 3.5)
project(yakl_unit)
enable_testing()

enable_language(Fortran)
enable_language(CXX)
enable_language(C)

set(CMAKE_CXX_STANDARD 20)

set(Kokkos_HOME $ENV{HOME}/kokkos)
set(Kokkos_BIN  ${CMAKE_CURRENT_BINARY_DIR}/kokkos)
add_subdirectory(${Kokkos_HOME} ${Kokkos_BIN})

set(YAKL_HOME ${CMAKE_CURRENT_SOURCE_DIR}/..)
set(YAKL_BIN  ${CMAKE_CURRENT_BINARY_DIR}/yakl)
add_subdirectory(${YAKL_HOME} ${YAKL_BIN})

# Unit test directories
add_subdirectory(Atomics)
add_subdirectory(CArray)
add_subdirectory(FArray)
add_subdirectory(Fortran_Gator)
add_subdirectory(Fortran_Link)
add_subdirectory(Intrinsics)
add_subdirectory(Kokkos_DeviceSpace)
add_subdirectory(Lambda)
if (YAKL_TEST_NETCDF)
  add_subdirectory(NetCDF)
endif()
if (YAKL_TEST_PNETCDF)
  add_subdirectory(PNetCDF)
endif()
add_subdirectory(OpenMP_Regions)
add_subdirectory(ParForC)
add_subdirectory(ParForFortran)
add_subdirectory(performance EXCLUDE_FROM_ALL)
add_subdirectory(Random)
add_subdirectory(Reductions)

